# xtuples

./: .gitignore  LICENSE  LICENSE.txt  README.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: index.html  json.html  search.js  xtuples.html
docs/src/: index.html
docs/src/xtuples/: index.html  json.html  xtuples.html
docs/xtuples/: __about__.html  json.html  xtuples.html
scripts/: docgen.cmd  doctest.cmd  doctest.sh  mypy.cmd  mypy.sh  pytest.cmd  pytest.sh  readme.cmd
src/xtuples/: __about__.py  __init__.py  f.py  i.py  json.py  n.py  test_utils.py  xtuples.py
src/xtuples/json/: __init__.py  json.py
test_perf/: __init__.py  test_perf_i.py
tests/: __init__.py  test.py  test_doctest_mypy.py  test_mypy.py  test_perf_i.py  utils.py
