[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xtuples"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = "==3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Tom Williams", email = "tomjrw@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tomjrwilliams/xtuples#readme"
Issues = "https://github.com/tomjrwilliams/xtuples/issues"
Source = "https://github.com/tomjrwilliams/xtuples"

[tool.hatch.version]
path = "src/xtuples/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest --doctest-modules"
test-cov = "coverage run -m pytest --doctest-modules"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
docs = "python -m pdoc --output-dir ./public ./"

[[tool.hatch.envs.all.matrix]]
python = ["3.9"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "pdoc"
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/xtuples tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["xtuples"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["xtuples", "tests"]
branch = true
parallel = true
omit = [
  "src/xtuples/__about__.py",
]

[tool.coverage.paths]
xtuples = ["src/xtuples", "*/xtuples/src/xtuples"]
tests = ["tests", "*/xtuples/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
